app/assets/stylesheets/custom.scss
@import url(http://fonts.googleapis.com/css?family=Quicksand:400,700|Shadows+Into+Light);
@import "style";


$dark-gray: #333;
$medium-gray: #555;
$light-gray: #777;
$super-light-gray: #eee;

$friendly-blue: #38B2CE;

$header-padding: 20px;
$section-padding: 40px;


body {
	font-family: "Quicksand";
	font-size: 14px;
}



.unit-spacing {
	padding-top: 60px;
	padding-bottom: 60px;
	max-width: 1400px;
	margin-right: auto;
	margin-left: auto;
}

.margin-five {
	margin-left: 5%;
	margin-right: 5%;
}

.logo {
	max-height: 36px;
	margin-top: 9px;
	margin-right: 20px;
	float: left;
}

#navbar, #scroll-navbar {
	text-align: center;
	margin-bottom: 0px;
	float: right;

	li {
		a {
			padding: $header-padding;
			color: $light-gray;
			text-decoration: none;
			font-size: 14px;
			background-color: white;
		}

		a:hover {
			background-color: $super-light-gray;
		}
	}
}

.active-nav {
	background-color: $super-light-gray;
}



#scroll-header {
	display: none; 
	width: 100%;
	position: fixed;
	z-index: 1;
	top: 0;
	right: 0;
	background-color: white; // not sure about this visually
}

#scroll-navbar > li {
	// background-color: white;
}

#scroll-name {
	@extend #name;
	text-align: left;
}

#scroll-name-link {
	@extend #name-link;
}



#hero-unit {
	background-position: center bottom;
	background-size: cover;
	background-image: url(ferry.jpg);
	height:420px;
}


#hero-text {
	font-size: 115%;
	color: black;
	margin-top: 190px;
	margin-right: 10%;
}

#closer-unit {
	background-position: center bottom;
	background-size: cover;
	background-image: url(spit_sunset.jpg);
	height:400px;
}

#closer-text {
	font-size: 250%;
	text-align: right;
	color: white;
	padding-top: 300px;
	padding-right: 10%;
}

#name-link {
	text-decoration: none;
}

#name {
	padding-top: 15px;
	padding-bottom: 0px;
	margin-bottom: 0px;
	color: black;
	min-width: 200px;
	font-weight: normal;
}

#me-image {
	width: auto;
	max-width: 300px;
}


#contact-content {
	 text-align: center;
}

#contact-text {
	margin-left: auto;
	margin-right: auto;
	width: 100%;
	max-width: 600px;
}

.contact-label {
	text-align: left;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 4px;
	width: 100%;
	max-width: 600px;
	font-size: 16px;
	color: $light-gray;
}

#contact-name, #contact-email, #contact-message {
	width: 100% !important;
	max-width: 600px !important;
	margin-bottom: 10px !important;
}

#contact-message {
	height: 200px;
}

#contact-submit {
	background-color: $friendly-blue;
	color: white;
	font-size: 16px;
	margin-top: 10px;

}

#contact-submit:hover {
	background-color: #04819E;
}

input, textarea {
    border:0px solid $super-light-gray;
    padding:5px; 
}

input:focus, textarea:focus { 
    outline: none;
    border-color: $friendly-blue;
    box-shadow:0 0 10px 4px #9ecaed;
}


#cs-header {
	text-align: right;
}

.list-header {
	font-weight: normal;
	font-style: italic;
}


.gray {
	background-color: $super-light-gray;
	margin-left: 0 !important;
	margin-right: 0;
}

#main-header {
}

#main-footer {
	padding-top: 50px;
	padding-bottom: 50px;
	text-align: center;
	background-color: $super-light-gray;

	ul {
		li {
			padding: 10px;
			font-size: 14px;
		}
	}
}

.footer-link {
	text-decoration: none;
	color: $dark-gray;
}

.footer-link:hover {
	color: black;
}

.friendly-header {
	font-family: 'Shadows Into Light'; 
	font-size: 250%;
}

.clean-header {
	font-weight: normal;
	font-size: 250%;
}

#photo-box {
	// float: right;
	// max-width: 50%;
	max-width: 800px;
}

.quote {
	font-size: 16px;
}







@media (max-width: 750px) {

#photography-header {
	font-size: 175%;
}

}

@media (max-width: 550px) {

	#navbar {
		li {
			a {
				padding-left: 15px;
				padding-right: 15px;
			}
		}
	}

	#photography-header {
	font-size: 165%;
	}

}


@include media-query(palm){ 

	#navbar {
		float: none;
		margin-right: 10%;
		margin-left: 10%;
		li {
			a {
				padding-left: $header-padding;
				padding-right: $header-padding;
			}
		}
	}

	#scroll-navbar {
		float: none;
	}

	#scroll-main-header {
		display:none;
	}

	#main-header {
		margin-left: 0;
		margin-right: 0;
	}

	#name {
		text-align: center;
		margin-left: 0;
		margin-right: 0;
	}

	#hero-text {
		margin-top: 130px;
		font-size: 110%;
		margin-left: 10%;
		margin-right: 10%;
	}

	#photography-header {
	font-size: 250%;
}

	.grid--item {
		padding-left: 0px !important;
	}


}

